Update spacing between links in footer to fix touch target accessibility issues

--- a/app/assets/stylesheets/design/layout/_footer.scss
+++ b/app/assets/stylesheets/design/layout/_footer.scss
@@ -16,5 +16,7 @@
 
   ul.bullets {
     margin-left: 0;
+
+    li { padding: 4px 0 4px 15px; }
   }
 }
